# mt32-pi

./: CMakeLists.txt  Config.mk  Kernel.mk  Makefile  README.md
.github/workflows/: ci.yml
include/: kernel.h  mt32pi.h  optional.h  power.h  utility.h
include/lcd/: ui.h
patches/: circle-newlib-3.1-aarch64-long-double.patch
sdcard/: mt32-pi.cfg
src/: config.cpp  kernel.cpp  main.cpp  mt32pi.cpp  power.cpp
src/lcd/drivers/: ssd1306.cpp
src/net/: ftpworker.cpp
